@@ -3,3 +3,5 @@
 -XX:TieredStopAtLevel=1
 -XX:+UseStringDeduplication
 -Dmaven.test.redirectTestOutputToFile=true
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
